--- a/index.html
+++ b/index.html
@@ -1,51 +1,171 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <title>CANTIERY</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: #ffffff;
-      text-align: center;
-    }
-    section {
-      padding: 80px 20px;
-    }
-    h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
-    p {
-      font-size: 20px;
-      max-width: 700px;
-      margin: auto;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 15px 30px;
-      background: linear-gradient(90deg, #7c3aed, #2563eb);
-      color: white;
-      text-decoration: none;
-      border-radius: 30px;
-      font-weight: bold;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>CANTIERY — Prevedi, Controlla, Risparmia</title>
+  <meta name="description" content="CANTIERY: il metodo per non essere spettatore della ristrutturazione. Prevedi, controlla e risparmia senza diventare tecnico."/>
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-<section>
-  <h1>CANTIERY</h1>
-  <p>
-    Prevedi. Controlla. Risparmia.  
-    Il metodo per non perdere soldi nella ristrutturazione e negli investimenti immobiliari.
-  </p>
-  <a class="btn" href="#">Scopri il metodo</a>
-</section>
+  <!-- NAV -->
+  <div class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="index.html">
+        <img src="logo.jpg" alt="CANTIERY logo" />
+        <div>
+          <div style="font-weight:900; letter-spacing:.02em">CANTIERY</div>
+          <div class="tag">PREVEDI · CONTROLLA · RISPARMIA</div>
+        </div>
+      </a>
+
+      <div class="menu">
+        <a href="#metodo">Metodo</a>
+        <a href="#test">Test</a>
+        <a href="#download">Checklist</a>
+        <a href="chi-sono.html">Chi sono</a>
+      </div>
+
+      <a class="btn btn-primary btn-small" href="#test">Fai il test</a>
+    </div>
+  </div>
+
+  <!-- HERO -->
+  <header class="hero">
+    <div class="container hero-grid">
+      <div class="reveal">
+        <div class="kicker"><b>Metodo CANTIERY</b> · per privati e investitori</div>
+        <h1>Non essere spettatore della tua ristrutturazione.<br>Diventa il pilota del tuo investimento.</h1>
+        <p class="lead">
+          Senza metodo rischi extra-costi, ritardi e scelte che abbassano il valore dell’immobile.
+          CANTIERY ti aiuta a capire cosa guardare, cosa chiedere e come decidere — <b>senza diventare tecnico</b>.
+        </p>
+
+        <div class="hero-actions">
+          <a class="btn btn-primary" href="#test">🔍 Scopri il tuo livello di rischio</a>
+          <a class="btn" href="chi-sono.html">👤 Chi sono</a>
+        </div>
+        <div class="hero-note">Approccio pratico, diretto, senza fuffa. Obiettivo: proteggere soldi e valore.</div>
+      </div>
+
+      <div class="panel reveal">
+        <h3>La verità che nessuno ti dice</h3>
+        <p>
+          “Costa molto di più <b>non sapere</b> cosa controllare che saperlo.”
+          Non serve diventare un tecnico: serve essere il pilota, non il passeggero.
+        </p>
+        <div class="badges">
+          <div class="badge">✅ Decisioni con criterio</div>
+          <div class="badge">✅ Sprechi tagliati</div>
+          <div class="badge">✅ Valore massimizzato</div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- METODO -->
+  <section id="metodo" class="section">
+    <div class="container">
+      <div class="reveal">
+        <h2>Il metodo CANTIERY in 3 mosse</h2>
+        <p class="sub">Una guida semplice per guidare il progetto: prevedere rischi, controllare il processo, risparmiare eliminando inefficienze.</p>
+      </div>
+
+      <div class="grid-3">
+        <div class="card reveal">
+          <p class="title"><span class="dot"></span> PREVEDI</p>
+          <p>Scopri rischi tecnici ed economici prima della prima “picconata”. Se lo vedi prima, lo risolvi prima.</p>
+        </div>
+        <div class="card reveal">
+          <p class="title"><span class="dot"></span> CONTROLLA</p>
+          <p>Monitori tempi, costi e qualità. Non chiedi “come va”: sai cosa deve succedere e perché.</p>
+        </div>
+        <div class="card reveal">
+          <p class="title"><span class="dot"></span> RISPARMIA</p>
+          <p>Il risparmio non è materiale scadente: è eliminare sprechi, errori e lavori inutili. Meno errori = più margine.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- TEST -->
+  <section id="test" class="section">
+    <div class="container split">
+      <div class="reveal">
+        <h2>Test rapido: che rischio stai correndo?</h2>
+        <p class="sub">
+          1 minuto. Risposte semplici. Alla fine ti dico se sei sotto controllo o se stai andando “a caso”.
+          Poi sblocchi la checklist del primo sopralluogo.
+        </p>
+        <a class="btn btn-primary" href="#quiz">🧠 Inizia ora</a>
+      </div>
+
+      <div class="reveal" id="quiz">
+        <div id="quizBox"></div>
+        <div id="quizResult" style="margin-top:12px;"></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- DOWNLOAD -->
+  <section id="download" class="section">
+    <div class="container split">
+      <div class="reveal">
+        <h2>Checklist gratuita: primo sopralluogo</h2>
+        <p class="sub">
+          Cosa guardare quando vedi un immobile per la prima volta, come capire lo stato reale e come valorizzarlo senza spendere “a caso”.
+        </p>
+        <div class="quote">
+          <b>Cosa contiene</b>
+          <p>✅ controlli rapidi · ✅ domande da fare · ✅ errori da evitare · ✅ priorità per valorizzare</p>
+        </div>
+      </div>
+
+      <div class="reveal">
+        <div class="card" style="min-height:auto">
+          <p class="title"><span class="dot"></span> Scarica (demo)</p>
+          <p style="color:var(--muted); line-height:1.55">
+            Per ora il download è diretto. Poi (step successivo) lo trasformiamo in “scarica dopo email” con Formspree/Brevo.
+          </p>
+          <div style="display:flex; gap:12px; margin-top:14px; flex-wrap:wrap">
+            <a class="btn btn-primary" href="checklist.pdf" download>⬇️ Scarica la checklist</a>
+            <a class="btn" href="chi-sono.html">Perché funziona</a>
+          </div>
+          <p class="small" style="margin-top:10px;">Nota: carica nel repo il file <b>checklist.pdf</b> (stesso nome).</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA -->
+  <section class="section">
+    <div class="container reveal">
+      <div class="quote">
+        <b>Vuoi fare le cose con metodo?</b>
+        <p>
+          Se stai per acquistare, ristrutturare o investire, il momento di capire è <b>prima</b>, non dopo.
+          Scrivimi e ti dico da dove partire.
+        </p>
+        <div style="display:flex; gap:12px; margin-top:14px; flex-wrap:wrap">
+          <a class="btn btn-primary" href="mailto:info@cantiery.it">📩 Contattami</a>
+          <a class="btn" href="chi-sono.html">Chi sono</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+      © <span id="y"></span> CANTIERY — Prevedi · Controlla · Risparmia
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
+  <script>document.getElementById("y").textContent=new Date().getFullYear();</script>
+</body>
+</html>
 
 </body>
 </html>
