--- a/index.html
+++ b/index.html
@@ -33,37 +33,16 @@
   </div>
 
   <!-- HERO -->
-  <header class="hero">
-    <div class="container hero-grid">
-      <div class="reveal">
-        <div class="kicker"><b>Metodo CANTIERY</b> · per privati e investitori</div>
-        <h1>Non essere spettatore della tua ristrutturazione.<br>Diventa il pilota del tuo investimento.</h1>
-        <p class="lead">
-          Senza metodo rischi extra-costi, ritardi e scelte che abbassano il valore dell’immobile.
-          CANTIERY ti aiuta a capire cosa guardare, cosa chiedere e come decidere — <b>senza diventare tecnico</b>.
-        </p>
+<section class="hero">
+  <h1>Non essere spettatore della tua ristrutturazione.<br>Diventa il pilota del tuo investimento.</h1>
+  <p>
+    Senza metodo, una ristrutturazione può bruciare i risparmi di una vita
+    o far fallire un investimento immobiliare.
+    CANTIERY ti insegna a prevedere, controllare e risparmiare.
+  </p>
+  <a href="#test" class="button">Scopri il tuo livello di rischio</a>
+</section>
 
-        <div class="hero-actions">
-          <a class="btn btn-primary" href="#test">🔍 Scopri il tuo livello di rischio</a>
-          <a class="btn" href="chi-sono.html">👤 Chi sono</a>
-        </div>
-        <div class="hero-note">Approccio pratico, diretto, senza fuffa. Obiettivo: proteggere soldi e valore.</div>
-      </div>
-
-      <div class="panel reveal">
-        <h3>La verità che nessuno ti dice</h3>
-        <p>
-          “Costa molto di più <b>non sapere</b> cosa controllare che saperlo.”
-          Non serve diventare un tecnico: serve essere il pilota, non il passeggero.
-        </p>
-        <div class="badges">
-          <div class="badge">✅ Decisioni con criterio</div>
-          <div class="badge">✅ Sprechi tagliati</div>
-          <div class="badge">✅ Valore massimizzato</div>
-        </div>
-      </div>
-    </div>
-  </header>
 
   <!-- METODO -->
   <section id="metodo" class="section">
