--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   </header>
 
-  <!-- HERO PREVEDI (grafica premium stile screenshot) -->
+  <!-- HERO PREVEDI -->
   <section class="hero-prevedi">
     <div class="hero-wrap">
       <!-- SINISTRA -->
@@ -57,7 +57,7 @@
 
           <div class="hero-cta">
             <a class="btn btn-primary" href="#test">Fai il test (2 minuti) →</a>
-            <button class="btn btn-ghost" type="button" data-booking> Prenota e chiarisci le prossime 3 decisioni</button>
+            <button class="btn btn-ghost" type="button" data-booking> Prenota su WhatsApp</button>
           </div>
 
           <div class="hero-micro">
@@ -75,8 +75,6 @@
         </p>
 
         <div class="hero-media">
-          <!-- Usiamo michele.jpg perché nel tuo repo esiste già.
-               Se vuoi un'immagine diversa, caricala e cambia src. -->
           <img src="michele.jpg" alt="Benefici metodo Prevedi: chiarezza, priorità, controllo" />
           <button class="watch-btn" type="button" data-scroll="#metodo">Guarda</button>
         </div>
@@ -102,7 +100,7 @@
     </div>
   </section>
 
-  <!-- SEZIONE METODO -->
+  <!-- METODO -->
   <section id="metodo" class="section section-light">
     <div class="container">
       <div class="section-head">
@@ -144,7 +142,7 @@
     </div>
   </section>
 
-  <!-- SEZIONE TEST -->
+  <!-- TEST -->
   <section id="test" class="section section-dark">
     <div class="container">
       <div class="section-head section-head-dark">
@@ -153,7 +151,6 @@
         <p>9 domande. Dashboard finale con punteggio per area + 3 azioni pratiche su misura.</p>
       </div>
 
-      <!-- QUIZ RENDERIZZATO VIA JS -->
       <div id="quizApp" class="quiz-shell"></div>
     </div>
   </section>
@@ -176,26 +173,27 @@
     </div>
   </section>
 
-  <!-- CONTATTI / PRENOTA -->
+  <!-- CONTATTI -->
   <section id="contatti" class="section section-light">
     <div class="container">
       <div class="contact">
         <div>
-          <h2>Prenota una consulenza</h2>
+          <h2>Prenota su WhatsApp</h2>
           <p class="muted">
-            Se non vedo valore concreto per te, te lo dico subito.
+            Scrivimi su WhatsApp: ti rispondo io. Se non vedo valore concreto per te, te lo dico subito.
           </p>
           <div class="contact-actions">
-            <button class="btn btn-primary" type="button" data-booking>Prenota e chiarisci le prossime 3 decisioni</button>
+            <button class="btn btn-primary" type="button" data-booking>Apri WhatsApp e prenota</button>
             <button class="btn btn-ghost-dark" type="button" data-open-modal>Scarica la checklist</button>
           </div>
         </div>
 
         <div class="contact-box">
-          <div class="contact-title">Contatti rapidi</div>
-          <div class="contact-row"><b>Email:</b> <span id="emailText">info@cantiery.it</span></div>
-          <div class="contact-row"><b>WhatsApp:</b> <span id="phoneText">+39 0123 456789</span></div>
-          <div class="contact-note">Se preferisci, scrivimi su WhatsApp: rispondo io.</div>
+          <div class="contact-title">Come funziona</div>
+          <div class="contact-row">1) Mi scrivi su WhatsApp</div>
+          <div class="contact-row">2) Mi dici obiettivo + immobile + budget</div>
+          <div class="contact-row">3) Ti indico le prossime 3 decisioni da chiarire</div>
+          <div class="contact-note">Nessun numero visibile sul sito: il contatto avviene solo cliccando il pulsante.</div>
         </div>
       </div>
     </div>
@@ -241,7 +239,7 @@
         </label>
 
         <button class="btn btn-primary btn-big" type="submit">Invia e scarica ora</button>
-        <div class="form-hint">Se il download non parte, assicurati di aver caricato <b>checklist-primo-sopralluogo.pdf</b> nel repo.</div>
+        <div class="form-hint">Assicurati di aver caricato <b>checklist-primo-sopralluogo.pdf</b> nel repo.</div>
       </form>
     </div>
   </div>
